; ModuleID = '/home/carl/AnghaBench/seafile/lib/extr_net.c_createSocket.c'
source_filename = "/home/carl/AnghaBench/seafile/lib/extr_net.c_createSocket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SOCK_STREAM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"create Socket failed %d\0A\00", align 1
@IPPROTO_TCP = common dso_local global i32 0, align 4
@TCP_NODELAY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"setsockopt failed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i32)* @createSocket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @createSocket(i32 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @SOCK_STREAM, align 4
  %11 = call i64 @socket(i32 %9, i32 %10, i32 0)
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %6, align 8
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load i64, i64* %6, align 8
  %16 = call i32 (i8*, ...) @ccnet_warning(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i64 %15)
  br label %36

17:                                               ; preds = %2
  %18 = load i32, i32* %5, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %35

20:                                               ; preds = %17
  store i32 1, i32* %8, align 4
  %21 = load i64, i64* %6, align 8
  %22 = call i64 @makeSocketNonBlocking(i64 %21)
  store i64 %22, i64* %6, align 8
  %23 = load i64, i64* %6, align 8
  %24 = load i32, i32* @IPPROTO_TCP, align 4
  %25 = load i32, i32* @TCP_NODELAY, align 4
  %26 = bitcast i32* %8 to i8*
  %27 = call i32 @setsockopt(i64 %23, i32 %24, i32 %25, i8* %26, i32 4)
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %20
  %31 = call i32 (i8*, ...) @ccnet_warning(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %32 = load i64, i64* %6, align 8
  %33 = call i32 @evutil_closesocket(i64 %32)
  store i64 -1, i64* %3, align 8
  br label %38

34:                                               ; preds = %20
  br label %35

35:                                               ; preds = %34, %17
  br label %36

36:                                               ; preds = %35, %14
  %37 = load i64, i64* %6, align 8
  store i64 %37, i64* %3, align 8
  br label %38

38:                                               ; preds = %36, %30
  %39 = load i64, i64* %3, align 8
  ret i64 %39
}

declare dso_local i64 @socket(i32, i32, i32) #1

declare dso_local i32 @ccnet_warning(i8*, ...) #1

declare dso_local i64 @makeSocketNonBlocking(i64) #1

declare dso_local i32 @setsockopt(i64, i32, i32, i8*, i32) #1

declare dso_local i32 @evutil_closesocket(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
